2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* HACKING: add a mention of how translations should be
	handled

2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: added j2k as a possible jpeg2000
	suffix

2007-09-18  Bastien Nocera  <hadess@hadess.net>

	* HACKING: add new hacking file, to give instructions to
	potential contributors

2007-09-18  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in:
	Make application/msword subclass of application/x-ole-storage.
	Patch from David Faure

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix the subrip mime-type to mention subrip,
	add magic, patch by Osmo Salomaa <otsaloma@cc.hut.fi>
	* tests/*: add a SubRip subtitle test

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the Atom mime-type, add magic to the RSS
	mime-type
	* tests/*: add RSS and Atom test cases

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove dubious C# magic, and add Vala
	mime-type, patch from Jürg Billeter <j@bitron.ch> (Closes: #12195)
	* tests/*: add C# and Vala test cases

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix JPEG-2000 mime-types and magic to
	follow the RFC (Closes: #11942)
	* tests/list: s,image/jpeg2000,image/jp2

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.vlc as a pattern for m3u files,
	as used by VideoLAN (Closes: #12114)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastien Bacher
	<seb128@debian.org> to add more aliases for Powerpoint and Word
	mime-types (Closes: #12231)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the audio/x-m4b mime-type,
	as a sub-class of audio/mp4 (Closes: #10830)

2007-08-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the JPEG2000 JPC glob to the
	list, as well as magic for both JP2 and JPC files
