@@ -2643,6 +2643,8 @@ command to generate the output files.
   </mime-type>
   <mime-type type="image/jp2">
     <_comment>JPEG-2000 image</_comment>
+    <alias type="image/jpeg2000"/>
+    <alias type="image/jpx"/>
     <magic priority="50">
       <match value="jP" type="string" offset="4" />
       <match value="\xFF\x4F\xFF\x51\x00" type="string" offset="0" />
@@ -2650,11 +2652,8 @@ command to generate the output files.
     </magic>
     <glob pattern="*.jp2"/>
     <glob pattern="*.jpc"/>
-<<<<<<< freedesktop.org.xml.in
+    <glob pattern="*.jpx"/>
     <glob pattern="*.j2k"/>
-=======
-    <alias type="image/jpeg2000"/>
->>>>>>> 1.278
   </mime-type>
   <mime-type type="image/x-dds">
     <_comment>DirectDraw surface</_comment>
