@@ -1,3 +1,8 @@
+2007-09-26  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add image/jpx and associated
+	glob as per http://www.iana.org/assignments/media-types/image/jpx
+
 2007-09-25  Bastien Nocera  <hadess@hadess.net>
 
 	* HACKING: add a mention of how translations should be
